# RAGU

./: .gitmodules  download_Ilya.py  graph.gml  log.txt  main.py  pyproject.toml  qa.json  requirements.txt  summary.json
BertRE/: run_relationship_extraction.py
ragu/common/: llm.py  logger.py
ragu/search_engine/: local_search.py
