[project]
name = "ragu"
version = "0.1.0"
description = ""
authors = [{ name = "AsphodelRem", email = "asphodel.bog.rem@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "numpy<2.0.0",
    "pandas>=2.3.0,<3",
    "nltk>=3.6.4",
    "torch>=2.7.1,<3",
    "transformers==4.49",
    "tqdm>=4.67.1,<5",
    "networkx~=3.5",
    "smart-chunker",
    "sentence-transformers>=4.1.0,<5",
    "openai>=1.86.0,<2",
    "pydantic-settings>=2.9.1,<3",
    "graspologic>=3.4.1,<4",
    "future>=1.0.0,<2",
    "pyvis>=0.3.2,<0.4",
    "nano-vectordb>=0.0.4.3,<0.1",
    "tiktoken>=0.9.0,<0.10",
    "fastparquet>=2024.11.0,<2025",
    "pytest==5.3.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.12.0",
    "spacy>=3.8.7",
    "rapidfuzz>=3.13.0",
    "pip>=25.1.1",
    "langchain-openai>=0.3.28",
    "pyarrow==16.1.0",
    "llama-index>=0.12.52",
]

[project.optional-dependencies]
vllm = []

[dependency-groups]
dev = [
    "pre-commit>=3.7.0,<4",
    "isort",
    "flake8>=7.0.0,<8",
    "mypy>=1.10.0,<2",
]

[tool.uv]

[tool.uv.sources]
smart-chunker = { git = "https://github.com/AsphodelRem/smart_chunker.git", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
